    Set.Union ~>    Complete_Lattice.Union
    Set.INTER ~>    Complete_Lattice.INTER
    Set.UNION ~>    Complete_Lattice.UNION
  - more convenient names for set intersection and union:
    Set.Int ~>      Set.inter
    Set.Un ~>       Set.union
  - authentic syntax for
    Set.Pow
    Set.image
  - mere abbreviations:
    Set.empty               (for bot)
    Set.UNIV                (for top)
    Complete_Lattice.Inter  (for Inf)
    Complete_Lattice.Union  (for Sup)
    Complete_Lattice.INTER  (for INFI)
    Complete_Lattice.UNION  (for SUPR)
  - object-logic definitions as far as appropriate

  INCOMPATIBILITY.

* Power operations on relations and functions are now one dedicate
constant "compow" with infix syntax "^^".  Power operations on
multiplicative monoids retains syntax "^" and is now defined generic
in class power.  INCOMPATIBILITY.

* Relation composition "R O S" now has a "more standard" argument
order, i.e., "R O S = {(x,z). EX y. (x,y) : R & (y,z) : S }".
INCOMPATIBILITY: Rewrite propositions with "S O R" --> "R O S". Proofs
may occationally break, since the O_assoc rule was not rewritten like
this.  Fix using O_assoc[symmetric].  The same applies to the curried
version "R OO S".

* ML antiquotation @{code_datatype} inserts definition of a datatype
generated by the code generator; see Predicate.thy for an example.

* New method "linarith" invokes existing linear arithmetic decision
procedure only.

* New implementation of quickcheck uses generic code generator;
default generators are provided for all suitable HOL types, records
and datatypes.

* Renamed theorems:
Suc_eq_add_numeral_1 -> Suc_eq_plus1
Suc_eq_add_numeral_1_left -> Suc_eq_plus1_left
Suc_plus1 -> Suc_eq_plus1

* Moved theorems:
Wellfounded.in_inv_image -> Relation.in_inv_image

* New sledgehammer option "Full Types" in Proof General settings menu.
Causes full type information to be output to the ATPs.  This slows
ATPs down considerably but eliminates a source of unsound "proofs"